[package]
name = "lyketo-eter"
description = ""
license = "MIT"
version = "0.1.0"
edition = "2021"


[dependencies]
enum_dispatch = "0.3.8"
strum = { version = "0.24.1", features = ["derive"] }
snap = "1.0.5"
extended-tea = "0.1.1"
byteorder = "1.4.3"
minilzo3 = "0.1.0"
minilzo = "0.2.0"
rust-lzo = "0.6.2"
lazy_static = "1.4.0"
crc32fast = "1.3.2"
strum_macros = "0.24.3"
ripemd = "0.1.1"
ripemd128 = "0.1.2"
sha1 = "0.10.1"
whirlpool = "0.10.1"
