[package]
name = "etervfs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
bytemuck = "1.12.1"
byteorder = "1.4.3"
bytes = "1.2.1"
crc32fast = "1.3.2"
glob = "0.3.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.86"
