[package]
name = "lyketo"
description = "File format serialization for metin2 formats"
license = "MIT"
version = "0.1.0"
edition = "2021"


[dependencies]
rust-lzo = "0.6.2"
min-max = "0.1"
nom = "7.1.1"
byteorder = "1.4.3"
structview = "1.1.0"

glob = "0.3.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
erased-serde = "0.3.22"
nalgebra = { version = "0.31.1", features = ["serde", "serde-serialize"] }
nalgebra-glm = { version = "0.17.0", features = ["serde-serialize"] }
pest = "2.3.1"
pest_derive = "2.3.1"
anyhow = "1.0.64"

