[package]
name = "lyketo-vfs"
description = ""
license = "MIT"
version = "0.1.0"
edition = "2021"


[dependencies]
enum_dispatch = "0.3.8"
strum = { version = "0.24.1", features = ["derive"] }
snap = "1.0.5"
extended-tea = "0.1.1"
byteorder = "1.4.3"
minilzo3 = "0.1.0"
minilzo = "0.2.0"
rust-lzo = "0.6.2"
lazy_static = "1.4.0"
crc32fast = "1.3.2"
strum_macros = "0.24.3"
ripemd = "0.1.1"
ripemd128 = "0.1.2"
sha1 = "0.10.1"
whirlpool = "0.10.1"
anyhow = "1.0.66"
tea-soft = "0.3.0"
human-size = "0.4.2"
hex = "0.4.3"
itertools = "0.10.5"
bytes = "1.2.1"
glob = "0.3.0"
json5 = "0.4.1"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
bytemuck = { version = "1.12.3", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
