[package]
name = "lyketo-vfs"
description = ""
license = "MIT"
version = "0.1.0"
edition = "2021"


[dependencies]
enum_dispatch = "0.3.8"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
lazy_static = "1.4.0"
once_cell = "1.18.0"
hex = "0.4.3"
itertools = "0.11.0"
glob = "0.3.0"
# tracing = "0.1.37"
# tracing-subscriber = "0.3.16"

# Bytedata handling
bytemuck = { version = "1.14.0", features = ["derive", "extern_crate_std", "extern_crate_alloc"] }
byteorder = "1.4.3"
bytes = "1.2.1"

# Hashing
crc32fast = "1.3.2"

# Cryptographic Algorithms
ripemd = "0.1.1"
ripemd128 = "0.1.2"
sha1 = "0.10.1"
whirlpool = "0.10.1"
minilzo = "0.2.0"
rust-lzo = "0.6.2"
tea-soft = "0.3.0"
extended-tea = "0.1.1"
snap = "1.1.0"

# Serialization
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
json5 = "0.4.1"

# Display
human-size = "0.4.2"
eyre = "0.6.8"
